--- a/style/galleryStyle.css
+++ b/style/galleryStyle.css
@@ -31,7 +31,7 @@
     gap: 24px;
     align-items: center;
     justify-content: center;
-    margin: 24px auto;
+    margin-top: 24px;
     
 }
 .gallery img {
@@ -44,11 +44,13 @@
 }
 
 #lightbox {
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-
+  background-color: rgba(66, 46, 66, 0.8);
 }
+
+#lightbox img {
+  position: sticky;
+  top: 24px;
+  height: 100%;
+  width: 100%;
+}
+
