--- a/style/galleryStyle.css
+++ b/style/galleryStyle.css
@@ -30,7 +30,7 @@
 }
 
 .gallery img:hover {
-    cursor: url('./svg/bxs_hand-down.svg'), auto;
+    cursor: url('../svg/bxs_hand-down.svg'), auto;
 }
 
 #lightbox {
